Make skin change self-viewable on Spigot
+ reset skins properly